tests/error/type_match/tuple_deduced_array_type.bz
function test()
{
	let _: [3: auto] = [ 1, 2i8, 3i64 ];
}
